nexus/3.service-nodeport.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: nexus3
  namespace: devops
spec:
  selector:
    app: nexus3
  type: NodePort
  ports:
    - name: web
      port: 8081
      protocol: TCP
      targetPort: 8081
