nexus/nexus.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nexus3
  namespace: devops
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nexus3
  template:
    metadata:
      labels:
        app: nexus3
    spec:
      containers:
        - name: nexus3
          image: sonatype/nexus3
          securityContext:
            runAsUser: 0
          imagePullPolicy: IfNotPresent
          livenessProbe:
            failureThreshold: 5
            initialDelaySeconds: 30
            periodSeconds: 5
            successThreshold: 1
            tcpSocket:
              port: 8081
            timeoutSeconds: 3
          readinessProbe:
            httpGet:
              path: /
              port: 8081
              scheme: HTTP
            initialDelaySeconds: 5
            timeoutSeconds: 30
            periodSeconds: 10
            successThreshold: 1
            failureThreshold: 3
          ports:
            - containerPort: 8081
              name: web
              protocol: TCP
          resources:
            limits:
              cpu: "2"
              memory: 4Gi
            requests:
              cpu: "1"
              memory: 2Gi
          volumeMounts:
            - mountPath: /nexus-data
              name: nexus3
              subPath: nexus-data
            - mountPath: /etc/localtime
              name: localtime
      volumes:
        - name: nexus3
          persistentVolumeClaim:
            claimName: nexus3
        - hostPath:
            path: /etc/localtime
            type: ""
          name: localtime
---
apiVersion: v1
kind: Service
metadata:
  name: nexus3
  namespace: devops
spec:
  selector:
    app: nexus3
  type: NodePort
  ports:
    - name: web
      port: 8081
      protocol: TCP
      targetPort: 8081
