nexus/3.service-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nexus3
  namespace: devops
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "1024m"
  labels:
    app: nexus3
spec:
  ingressClassName: nginx
  rules:
  - host: nexus.github.icu
    http:
      paths:
      - backend:
          service:
            name: nexus3
            port:
              number: 8081
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - nexus.github.icu
    secretName: github-tls
